# divi_face_recognition

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env.example  Dockerfile  __init__.py  config.py  main.py  pyproject.toml  string.json
app/api/: endpoints.py
app/api/routes/: crud_person.py  databases.py  face_recognition.py  save_to_db.py
app/auth/: utils.py
app/core/: config.py  exceptions.py
app/models/: face.py
app/schemas/: data.py  db.py  face_meta.py
app/services/: database.py  embedding.py  face_recognition.py
app/services/database/: db_template.py  localdb.py  mongodb.py
app/services/face_recognition/: divi_matcher.py  divi_processor.py  divi_service.py  matcher.py  processor.py
app/services/file_storage/: async_s3_manager.py  async_storage.py
redis/: docker-compose.yml
